--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .row{   
-
-    background-color:black;
+    display: flex;
+    justify-content: space-around;
+    background-color:lightblue;
     color:white;
     font-size:20px;
 }
